--- a/src/app/aboutus/global.css
+++ b/src/app/aboutus/global.css
@@ -17,7 +17,7 @@ body {
 
   /* Colors */
   --text-white: #fff;
-  --blue-blue-70: #3a86ff;
+  --blue-blue-70: #4a3aff;
   --white-white-20: #f8f9fa;
   --color-whitesmoke-100: #eceef0;
   --color-cornflowerblue: #54a1ff;
