--- a/src/components/BlogDE/Blog.module.css
+++ b/src/components/BlogDE/Blog.module.css
@@ -8,7 +8,7 @@
   
 }
 .itemBase {
-  background-color: rgb(15, 72, 193) !important;
+  background-color: #4a3aff !important;
 }
 .itemIndicator {
   color: aliceblue !important;
