--- a/template/Questions/Questions.module.css
+++ b/template/Questions/Questions.module.css
@@ -86,7 +86,7 @@
     display: flex;
     justify-content: center;
     max-width: 1600px;
-    /*height: 300px;*/
+    height: 300px;
   }
 
   .questionsForm {
