--- a/src/components/ui/Textarea/Textarea.module.scss
+++ b/src/components/ui/Textarea/Textarea.module.scss
@@ -15,7 +15,7 @@
   line-height: 130%;
   letter-spacing: -0.78px;
   outline: none;
-  background-color: transparent;
+  background-color:#c4c7f1;
   border: 1px solid $black;
   height: 200px;
   resize: none;
