--- a/src/components/LocaleSwitcherSelect/LocaleSwitcherSelect.module.css
+++ b/src/components/LocaleSwitcherSelect/LocaleSwitcherSelect.module.css
@@ -1,6 +1,20 @@
 .select {
   z-index: 2;
   top: 50px;
-  right: 50px;
+  right: 200px;
   position: absolute;
+  display: inline-flex;
+  appearance: none; 
+  background-color: transparent; 
+    
 }
+
+@media screen and (max-width: 1050px) {
+  .select {
+    z-index: 2;
+    top: 50px;
+    right: 50px;
+    position: absolute;
+  }
+}
+
