--- a/src/components/LocaleSwitcherSelect/LocaleSwitcherSelect.module.css
+++ b/src/components/LocaleSwitcherSelect/LocaleSwitcherSelect.module.css
@@ -9,13 +9,14 @@
 }
 
 .select {
-  background-color: red;
+  background-color: transparent;
+  color: aliceblue;
 }
 
 @media screen and (max-width: 1050px) {
   .select {
     z-index: 2;
-    top: 50px;
+    top: 5px;
     right: 50px;
     position: absolute;
   }
